Fix overflow for conditions. fix validation for timeseries interval.

--- a/content/style/combobox.css
+++ b/content/style/combobox.css
@@ -23,7 +23,10 @@ ul.combolist {
     margin-top:-1rem;
     z-index:9;
 } 
-
+ul.combolist.showtop {
+    bottom:1rem;
+    margin-top:0;
+}
 ul.combolist li {
     padding:.5rem;
     border-bottom:1px solid #ccc;
