--- a/content/style/dashboard.css
+++ b/content/style/dashboard.css
@@ -140,6 +140,7 @@ ul.widget-nav-list li.action-icon{
   background-color:#fff;
   margin:0 auto;
   box-shadow: 0px 0px 15px 3px #333;
+  overflow: hidden;
 }
 /*End Modal Segment*/
 
